--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,8 +1,19 @@
 hero:
-  image: /images/uploads/homepage-hero.jpg
-  title: Great coffee with a conscience
-story: >-
-  Kaldi is the coffee store for everyone who believes that great coffee
-  shouldn't just taste good, it should do good too. We source all of our beans
-  directly from small scale sustainable farmers and make sure part of the
-  profits are reinvested in their communities.
+  image: /images/uploads/journeyfinancial_road-1.jpg
+  title: Journey Financial
+story: |-
+  UNBIASED ADVICE
+
+  Independent, fee-only advice which means your interests come first – always!
+
+  <br>
+
+  AFFORDABLE RATES
+
+  Flexible packages or consulting by the hour at rates that will fit any budget
+
+  <br>
+
+  FINANCIAL PLANNING
+
+  Eliminate money stress and gain confidence with a personalized financial plan
