--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -17,5 +17,4 @@ story: |-
   FINANCIAL PLANNING
 
   Eliminate money stress and gain confidence with a personalized financial plan
-
-test: |-
+test: weeeeeeeeow
