add all aspects of subheader

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,6 +1,7 @@
 hero:
   image: /images/uploads/journeyfinancial_road-1.jpg
   title: Journey Financial
+  subheader: Unbiased Advice, Affordable Rates, and Personalized Financial Planning
 story: |-
   UNBIASED ADVICE
 
