--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -51,6 +51,7 @@ collections:
             widget: object
             fields:
               - {label: Title, name: title, widget: string}
+              - {label: Subheader, name: subheader, widget: string}
               - {label: Image, name: image, widget: image}
           - label: Story
             name: story
