--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,7 +1,7 @@
 hero:
   image: /images/uploads/journeyfinancial_road-1.jpg
+  subheader: Unbiased Advice
   title: Journey Financial
-  subheader: Unbiased Advice, Affordable Rates, and Personalized Financial Planning
 story: |-
   UNBIASED ADVICE
 
