Update Pages “home”

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,6 +1,6 @@
 hero:
   image: /images/uploads/journeyfinancial_road-1.jpg
-  subheader: Unbiased Advice
+  subheader: 'Unbiased Advice, Affordable Rates, and Personalized Financial Planning'
   title: Journey Financial
 story: |-
   UNBIASED ADVICE
