Update Pages “home”

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -2,20 +2,5 @@ hero:
   image: /images/uploads/journeyfinancial_road-1.jpg
   subheader: 'Unbiased Advice, Affordable Rates, and Personalized Financial Planning'
   title: Journey Financial
-story: |-
-  UNBIASED ADVICE
-
-  Independent, fee-only advice which means your interests come first – always!
-
-  <br>
-
-  AFFORDABLE RATES
-
-  Flexible packages or consulting by the hour at rates that will fit any budget
-
-  <br>
-
-  FINANCIAL PLANNING
-
-  Eliminate money stress and gain confidence with a personalized financial plan
+story: UNBIASED
 test: weeeeeeeeow1111
