--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -59,6 +59,13 @@ collections:
           - label: Test
             name: test
             widget: markdown
+          - label: Services
+            name: services
+            widget: object
+            fields:
+              - {label: Title, name: title, widget: string}
+              - {label: Description, name: description, widget: string}
+              - {label: Info, name: info, widget: string}
 
   - name: settings
     label: Settings
