fixing error. was yml in home.yml

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -4,4 +4,7 @@ hero:
   title: Journey Financial
 story: UNBIASED
 test: weeeeeeeeow1111
-services: test
+services:
+  title:
+  description:
+  info:
