Update Pages “home”

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -5,6 +5,6 @@ hero:
 story: UNBIASED
 test: weeeeeeeeow1111
 services:
-  title:
-  description:
-  info:
+  description: fdsfs
+  info: fdsfdsfsdfdsfds
+  title: What We Do
