--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -35,7 +35,7 @@ collections:
     fields:
       - {label: Title, name: title, widget: string, required: true}
       - {label: Publish Date, name: date, widget: datetime}
-      - {label: Description, name: description, widget: string}
+      - {label: Description, name: description, widget: markup}
       - {label: Image, name: image, widget: image}
       - {label: Body, name: body, widget: markdown}
 
@@ -64,7 +64,7 @@ collections:
             widget: object
             fields:
               - {label: Title, name: title, widget: string}
-              - {label: Description, name: description, widget: string}
+              - {label: Description, name: description, widget: markup}
               - {label: Info, name: info, widget: string}
 
   - name: settings
