Update Pages “home”

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -5,10 +5,77 @@ hero:
 story: UNBIASED
 test: weeeeeeeeow1111
 services:
+  description1: >-
+    Journey Financial Consulting is a comprehensive financial advising and
+    planning firm that is passionate about empowering clients to take ownership
+    of their finances, while educating them on topics pertaining to personal
+    finance. 
+
+
+
+
+    Along your financial journey there are many events which merit an
+    independent, third-party review of your financial situation.  As the
+    consulting services are offered at an hourly rate, you have the flexibility
+    to decide the scope of our engagement.
+
+
+
+
+    The consulting services will add value whether you:
+
+
+
+
+    * have just a few questions;
+
+    * need some help following a life milestone;
+
+    * want to know if you have enough to retire; or
+
+    * require a full financial plan.
+  description2: >-
+    Complementing the consulting services, are an array of tools which will help
+    make your financial journey easier!  Reading a financial plan is not enough,
+    you need simple tools to make sure you can manage your finances on an
+    ongoing basis.  Understanding rates of return, asset allocation and your net
+    worth, allow for the assessment of the success of your financial journey.
+
+
+
+
+    In addition, in reviewing your financial position there are opportunities to
+    benefit from resources which can save you money.  
+
+
+
+
+    Curious about online budgeting software?
+
+
+    Want to convert CAD to USD more cheaply?
+
+
+    Need assistance choosing and opening an online brokerage account?
+  description3: >-
+    This technique is a means of converting your mortgage debt into a leveraged
+    portfolio which benefits from the interest being tax deductible.  While this
+    strategy is not without risk, with proper planning and a long-term approach
+    the benefits include:
+
+
+
+
+    paying off your mortgage faster using the dividends from your investment
+    portfolio;
+
+
+    building an investment portfolio with every dollar of principal you repay on
+    your mortgage; and
+
+
+    reduced taxes.
+  service1: Financial Consulting
+  service2: Tools and Resources
+  service3: Smith Manoeuvre
   title: What We Do
-  service1:
-  description1: fdsfs
-  service2:
-  description2: fdsfs
-  service3:
-  description3: fdsfs
