Update Pages “home”

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -12,19 +12,13 @@ services:
     finance. 
 
 
-
-
     Along your financial journey there are many events which merit an
     independent, third-party review of your financial situation.  As the
     consulting services are offered at an hourly rate, you have the flexibility
     to decide the scope of our engagement.
 
 
-
-
     The consulting services will add value whether you:
-
-
 
 
     * have just a few questions;
@@ -50,13 +44,11 @@ services:
 
 
 
-    Curious about online budgeting software?
+    * Curious about online budgeting software?
 
+    * Want to convert CAD to USD more cheaply?
 
-    Want to convert CAD to USD more cheaply?
-
-
-    Need assistance choosing and opening an online brokerage account?
+    * Need assistance choosing and opening an online brokerage account?
   description3: >-
     This technique is a means of converting your mortgage debt into a leveraged
     portfolio which benefits from the interest being tax deductible.  While this
@@ -64,17 +56,13 @@ services:
     the benefits include:
 
 
-
-
-    paying off your mortgage faster using the dividends from your investment
+    * paying off your mortgage faster using the dividends from your investment
     portfolio;
 
+    * building an investment portfolio with every dollar of principal you repay
+    on your mortgage; and
 
-    building an investment portfolio with every dollar of principal you repay on
-    your mortgage; and
-
-
-    reduced taxes.
+    * reduced taxes.
   service1: Financial Consulting
   service2: Tools and Resources
   service3: Smith Manoeuvre
