try changing test to body

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -3,7 +3,7 @@ hero:
   subheader: 'Unbiased Advice, Affordable Rates, and Personalized Financial Planning'
   title: Journey Financial
 story: UNBIASED
-test: weeeeeeeeow1111
+body: weeeeeeeeow1111
 services:
   description1: >-
     Journey Financial Consulting is a comprehensive financial advising and
