adding individ services objects

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -5,20 +5,11 @@ hero:
 story: UNBIASED
 body: weeeeeeeeow1111
 services:
-  description1: >-
-    Journey Financial Consulting is a comprehensive financial advising and
-    planning firm that is passionate about empowering clients to take ownership
-    of their finances, while educating them on topics pertaining to personal
-    finance. 
-
-
-    Along your financial journey there are many events which merit an
-    independent, third-party review of your financial situation.  As the
-    consulting services are offered at an hourly rate, you have the flexibility
-    to decide the scope of our engagement.
-
-
-    The consulting services will add value whether you:
+  title: What We Do
+service1:
+  title:
+  body:
+    The consulting services will add value whether you
 
 
     * have just a few questions;
@@ -28,7 +19,10 @@ services:
     * want to know if you have enough to retire; or
 
     * require a full financial plan.
-  description2: >-
+
+service2:
+  title:
+  body:
     Complementing the consulting services, are an array of tools which will help
     make your financial journey easier!  Reading a financial plan is not enough,
     you need simple tools to make sure you can manage your finances on an
@@ -49,11 +43,11 @@ services:
     * Want to convert CAD to USD more cheaply?
 
     * Need assistance choosing and opening an online brokerage account?
-  description3: >-
+
     This technique is a means of converting your mortgage debt into a leveraged
     portfolio which benefits from the interest being tax deductible.  While this
     strategy is not without risk, with proper planning and a long-term approach
-    the benefits include:
+    the benefits include
 
 
     * paying off your mortgage faster using the dividends from your investment
@@ -63,7 +57,6 @@ services:
     on your mortgage; and
 
     * reduced taxes.
-  service1: Financial Consulting
-  service2: Tools and Resources
-  service3: Smith Manoeuvre
-  title: What We Do
+service3:
+  title:
+  body:
