--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - {label: Title, name: title, widget: string, required: true}
       - {label: Publish Date, name: date, widget: datetime}
       - {label: Image, name: image, widget: image, required: true}
-
+#have to add services here
       - {label: Weight, name: weight, widget: number}
       - {label: Price, name: price, widget: number}
       - {label: Body, name: body, widget: markdown}
